# SA-2A-TorchScript-Plugin

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
TCNPlugin.vst3/Contents/_CodeSignature/: CodeResources
